crates/ir/tests/snapshots/lower_test__json__to_json_bool.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module json__to_json_bool

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/json/json_to_string as json_to_string(Json): String
declare json_to_string: (Json) -> String
declare println: (s) -> Unit

fn main() -> Unit =
  let v1: Dict[core/json.ToJson, Bool] = get_dict core/json.ToJson[Bool]
  let v2: Json = trait_call core/json.ToJson.to_json(v1, true)
  let v3: String = call json_to_string(v2)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4
